[package]
name = "uddsketch"
version = "0.1.0"
authors = ["Nikolay Novik <nickolainovik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

readme = "README.md"
description = "Implementation of uddsketch histogram"

exclude = [".github", ".gitignore"]

homepage = "https://github.com/jettify/uddsketch"
repository = "https://github.com/jettify/uddsketch.git"

keywords = ["collections", "data-structures", "probabilistic"]
categories = ["algorithms", "data-structures"]

license = "Apache-2.0"

[dependencies]
